Minor wording change [skip ci]

--- a/docs/tutorials/05-PreprocessingForFFTs.ipynb
+++ b/docs/tutorials/05-PreprocessingForFFTs.ipynb
@@ -413,7 +413,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The pre-processed signal may look absurd, but it has two *very* important features: the signal is periodic, and the signal is smooth.  As explained in [the paper](https://arxiv.org/abs/2405.06197), this results in frequency-domain data that more accurately reflects the true physical signal."
+    "The pre-processed signal may look pretty strange, but it has two *very* important features: the signal is periodic, and the signal is smooth.  As explained in [the paper](https://arxiv.org/abs/2405.06197), this results in frequency-domain data that more accurately reflects the true physical signal.  But these features would not be present with standard signal-processing techniques."
    ]
   }
  ],
@@ -433,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
