Fix typo #major

--- a/docs/tutorials/01-Simulations_and_Metadata.ipynb
+++ b/docs/tutorials/01-Simulations_and_Metadata.ipynb
@@ -105,7 +105,7 @@
    "source": [
     "## Metadata\n",
     "\n",
-    "For each simulation, you need to know its physical parameters — mass ratio, spins, initial separation, eccentricity, etc. — as well as information about the simulation itself and where to find the data.  The `sxs.metadata` object encapsulates that information, with nice interactive features to help you explore.\n",
+    "For each simulation, you need to know its physical parameters — mass ratio, spins, initial separation, eccentricity, etc. — as well as information about the simulation itself and where to find the data.  The `sxs.Metadata` object encapsulates that information, with nice interactive features to help you explore.\n",
     "\n",
     "Just to take an example, let's focus on one particular simulation in the list, the binary black hole simulation with SXS ID `SXS:BBH:0123`:"
    ]
