Update for new interface

--- a/docs/tutorials/00-Introduction.ipynb
+++ b/docs/tutorials/00-Introduction.ipynb
@@ -17,41 +17,39 @@
    "source": [
     "# Pythonic Preliminaries\n",
     "\n",
-    "* ***Don't*** use your system python.  Installing packages to it might screw up how your OS works.\n",
+    "* ***Don't*** use your system python.  Installing packages to it might mess up how your OS works.\n",
     "* ***Don't*** use `sudo` when doing anything involving python.\n",
     "* ***Do*** use an environment manager:\n",
-    "  * [Anaconda](https://www.anaconda.com/products/individual) is best for scientific python\n",
-    "  * [Virtualenv](https://virtualenv.pypa.io/en/latest/) is slightly simpler, but much less capable\n",
-    "  * [Pip](https://pip.pypa.io/en/stable/) is a useful tool, but is not an environment manager; don't rely on it alone\n",
-    "  * Pipenv is only suitable for web development, not scientific python; don't use this at all\n",
+    "  * [`pixi`](https://pixi.sh/) is the latest way to use [conda](https://docs.conda.io/projects/conda/en/latest/index.html)/[mamba](https://mamba.readthedocs.io/en/latest/index.html).\n",
+    "  * [`uv`](https://docs.astral.sh/uv/) is the only reasonable way to use [`pip`](https://pip.pypa.io/en/stable/).\n",
     "\n",
-    "The `sxs` package requires python 3.8 or greater, and a bunch of other packages that should be automatically installed along with it.\n",
+    "The `sxs` package requires python 3.10 or greater, and a bunch of other packages that should be automatically installed along with it.\n",
     "\n",
-    "The simplest way to install this package is to install anaconda (from the link above) and then install `sxs` like this:\n",
-    "\n",
-    "```python\n",
-    "conda install -c conda-forge sxs\n",
-    "```\n",
-    "\n",
-    "But if you have your own environment set up in some other way you could also do\n",
+    "The old-fashioned ways to install this package work as usual:\n",
     "\n",
     "```python\n",
     "python -m pip install sxs\n",
     "```\n",
     "\n",
-    "If you want a more complete set of tools, you could also do something like\n",
+    "or\n",
     "\n",
     "```python\n",
-    "conda install -c conda-forge sxs-ecosystem\n",
+    "mamba install -c conda-forge sxs\n",
+    "```\n",
+    "\n",
+    "When using either `pixi` or `uv` — as we recommend — you can add the package to your workspace/environment with\n",
+    "\n",
+    "```python\n",
+    "pixi init sxs  # If you don't have a workspace already\n",
+    "pixi add sxs\n",
     "```\n",
     "\n",
     "or\n",
     "\n",
     "```python\n",
-    "python -m pip install sxs[ecosystem]\n",
-    "```\n",
-    "\n",
-    "This installs nice goodies like [Matplotlib](https://matplotlib.org/) for plotting and [Jupyter](https://jupyter.org/) for running interactive notebooks like this one yourself.  On non-Windows systems, this also installs some other useful packages from the SXS collaboration, like [`scri`](https://github.com/moble/scri)."
+    "uv venv  # If you don't have a venv already\n",
+    "uv pip install sxs\n",
+    "```"
    ]
   },
   {
@@ -183,7 +181,7 @@
     "\n",
     "The first line will\n",
     "\n",
-    "  1. download the catalog of SXS `Simulations` with relevant metadata, if necessary, and cache it to disk if desired\n",
+    "  1. download the catalog of SXS simulations with relevant metadata, if necessary, and cache it to disk if desired\n",
     "  2. find the metadata for the simulation with the given ID\n",
     "  3. check that the simulation has not been deprecated (if so, it will advise you of what to do)\n",
     "  4. decide on the version and `Lev` to use — defaulting to the most recent of each\n",
@@ -240,6 +238,8 @@
    "source": [
     "(If this failed for you, it's probably because you don't already have the data, and you haven't set up the sensible defaults in the previous section.  Review that advice to see how to set up those defaults, or pass `download=True` to the `sxs.load` function to download just this once.)\n",
     "\n",
+    "Note that `h.data` represents the modes of the strain waveform, which do not asymptote to zero after merger because of memory effects — real physical effects that should be present in the waveforms.\n",
+    "\n",
     "This example loads the metadata into the `sxs_bbh_1234` object.  Then, as soon as `sxs_bbh_1234.h` is accessed, it downloads and loads the waveform.  We extract the time data with `sxs_bbh_1234.h.t`, and the real part of the complex data with `sxs_bbh_1234.h.data.real`.  We will get into much more detail about this in the following notebooks."
    ]
   },
@@ -251,7 +251,7 @@
     "\n",
     "It is probably best to go through these notebooks in order:\n",
     "\n",
-    "  1. [The `Simulations` interface and `Metadata`](/tutorials/01-Simulations_and_Metadata)\n",
+    "  1. [The catalog `DataFrame` interface](/tutorials/01-Catalog_Dataframe)\n",
     "  2. [The `Simulation` interface](/tutorials/02-Simulation)\n",
     "  3. [Data describing `Horizons`](/tutorials/03-Horizons)\n",
     "  4. [Introduction to `WaveformModes` objects](/tutorials/04-Waveforms)"
@@ -274,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
