Get rid of old metadata stuff in favor of pandas objects

--- a/docs/tutorials/02-Simulation.ipynb
+++ b/docs/tutorials/02-Simulation.ipynb
@@ -425,7 +425,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can extract the metadata for this one simulation in a format consistent with other simulations as a `pandas` series with the attribute `sim.series`.  (Here, we'll use `pandas` explicitly to display the series with a little more detail.)"
+    "However, one important point to note about the metadata is that it is\n",
+    "not always in a format we might expect.  For example, the\n",
+    "`reference_eccentricity` field will often be a string like\n",
+    "`\"<7.2e-05\"`, which makes it awkward to compute with.  These sorts of\n",
+    "issues are avoided with the `dataframe` interface described on the\n",
+    "previous page by forcing fields to have consistent types."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can extract the metadata for this one simulation in a format consistent with other simulations as a `pandas.Series` object with the attribute `sim.series`.  (Here, we'll use `pandas` explicitly to display the series with a little more detail.)"
    ]
   },
   {
