--- a/docs/tutorials/01-Catalog_Dataframe.ipynb
+++ b/docs/tutorials/01-Catalog_Dataframe.ipynb
@@ -21,14 +21,8 @@
     "this tutorial — though with nice interactive tables and plots.\n",
     "\n",
     "Here, we explain some of the fundamentals, and give examples of how to\n",
-    "use the data directly."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To begin, we load the dataframe object with the `sxs.load` function:"
+    "use the data directly.  To begin, we load the dataframe object with\n",
+    "the `sxs.load` function:"
    ]
   },
   {
@@ -569,7 +563,7 @@
    "source": [
     "### Slices\n",
     "\n",
-    "We can slice the dataframe in a dizzying number of ways.  But there are two that are simplest and most reliable.  First, and most easily, we can take standard slices, like the first four elements:"
+    "We can slice the dataframe in a dizzying number of ways.  But there are two that are simplest and most reliable.  First, and most easily, we can take standard slices, like the first four rows:"
    ]
   },
   {
@@ -1041,7 +1035,7 @@
    "source": [
     "### Tests\n",
     "\n",
-    "The concept of tests is fairly simply.  For example, we can test whether or not the `object_types` field is equal to `BHNS`:"
+    "The concept of tests is fairly simple.  For example, we can test whether or not the `object_types` field is equal to `BHNS`:"
    ]
   },
   {
@@ -1761,7 +1755,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Built-in filters\n",
+    "### Built-in filters\n",
     "\n",
     "The `df` object has various built-in filters that can be used to\n",
     "extract data.  This is because `df` is actually a\n",
@@ -1817,10 +1811,11 @@
    "metadata": {},
    "source": [
     "These names are all fairly self-explanatory, and are individually\n",
-    "documented with more details.  Each one returns another\n",
-    "`SimulationsDataFrame` with just the selected simulations; as such\n",
-    "they can be combined.  For example, to get only un-deprecated\n",
-    "eccentric BBH systems, we can call\n",
+    "documented with more details\n",
+    "[here](https://sxs.readthedocs.io/en/main/api/simulations/#sxs.Simulations.reload).\n",
+    "Each one returns another `SimulationsDataFrame` with just the selected\n",
+    "simulations; as such they can be combined.  For example, to get only\n",
+    "un-deprecated eccentric BBH systems, we can call\n",
     "```python\n",
     "df.undeprecated.BBH.eccentric\n",
     "```"
