Don't recommend superseding

--- a/docs/tutorials/00-Introduction.ipynb
+++ b/docs/tutorials/00-Introduction.ipynb
@@ -102,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sxs.write_config(download=True, cache=True, auto_supersede=True)"
+    "sxs.write_config(download=True, cache=True, auto_supersede=False)"
    ]
   },
   {
@@ -120,7 +120,7 @@
     {
      "data": {
       "text/plain": [
-       "{'download': True, 'cache': True, 'auto_supersede': True}"
+       "{'download': True, 'cache': True, 'auto_supersede': False}"
       ]
      },
      "execution_count": 3,
