Mention CaltechDATA alongside Zenodo

--- a/docs/tutorials/02-Simulation.ipynb
+++ b/docs/tutorials/02-Simulation.ipynb
@@ -563,10 +563,10 @@
    "source": [
     "These DOIs are permanent and can be used to refer to the data in\n",
     "publications, in the same way that DOIs for journal articles are used.\n",
-    "They point to deposits of the data in the Zenodo repository, which is\n",
-    "a long-term, open-access archive.  This is also where the data are\n",
-    "automatically obtained when you load a particular data set for the\n",
-    "first time."
+    "They point to deposits of the data in the Zenodo or CaltechDATA\n",
+    "repository, which are long-term, open-access archives.  This is also\n",
+    "where the data are automatically obtained when you load a particular\n",
+    "data set for the first time."
    ]
   },
   {
