Simplify links to other tutorial pages
[skip ci]

--- a/docs/tutorials/00-Introduction.ipynb
+++ b/docs/tutorials/00-Introduction.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "This series of notebooks describes the `sxs` python package, which provides an interface to the data produced by the Simulating eXtreme Spacetimes collaboration.  All that data is hosted on [Zenodo](https://zenodo.org/communities/sxs) and [CaltechDATA](https://data.caltech.edu/).  Each simulation gets its own DOI and its own web page — like [this one](https://doi.org/10.5281/zenodo.1213436), for example.  But you want an easier way to get the data than clicking on links.  This package will do that for you.\n",
+    "This series of notebooks describes the `sxs` python package, which provides an interface to the data produced by the Simulating eXtreme Spacetimes collaboration.  All that data is hosted on [Zenodo](https://zenodo.org/communities/sxs) and [CaltechDATA](https://data.caltech.edu/).  Each simulation gets its own DOI and its own web page — like [DOI 10.26138/SXS:BBH:4001](https://doi.org/10.26138/SXS:BBH:4001), for example, which redirects to its CaltechDATA page.  But you want an easier way to get the data than clicking on links.  This package will do that for you.\n",
     "\n",
     "The documentation is [here](https://sxs.readthedocs.io/en/main/).  The github page is [here](https://github.com/sxs-collaboration/sxs/).  Please feel free to open issues to report problems, or pull requests to fix them."
    ]
@@ -251,10 +251,10 @@
     "\n",
     "It is probably best to go through these notebooks in order:\n",
     "\n",
-    "  1. [The catalog `DataFrame` interface](/tutorials/01-Catalog_Dataframe)\n",
-    "  2. [The `Simulation` interface](/tutorials/02-Simulation)\n",
-    "  3. [Data describing `Horizons`](/tutorials/03-Horizons)\n",
-    "  4. [Introduction to `WaveformModes` objects](/tutorials/04-Waveforms)"
+    "  1. [The catalog `DataFrame` interface](01-Catalog_Dataframe)\n",
+    "  2. [The `Simulation` interface](02-Simulation)\n",
+    "  3. [Data describing `Horizons`](03-Horizons)\n",
+    "  4. [Introduction to `WaveformModes` objects](04-Waveforms)"
    ]
   }
  ],
