Fix links to other tutorial pages
[skip ci]

--- a/docs/tutorials/00-Introduction.ipynb
+++ b/docs/tutorials/00-Introduction.ipynb
@@ -251,10 +251,10 @@
     "\n",
     "It is probably best to go through these notebooks in order:\n",
     "\n",
-    "  1. [The catalog `DataFrame` interface](01-Catalog_Dataframe)\n",
-    "  2. [The `Simulation` interface](02-Simulation)\n",
-    "  3. [Data describing `Horizons`](03-Horizons)\n",
-    "  4. [Introduction to `WaveformModes` objects](04-Waveforms)"
+    "  1. [The catalog `DataFrame` interface](../01-Catalog_Dataframe)\n",
+    "  2. [The `Simulation` interface](../02-Simulation)\n",
+    "  3. [Data describing `Horizons`](../03-Horizons)\n",
+    "  4. [Introduction to `WaveformModes` objects](../04-Waveforms)"
    ]
   }
  ],
