Fix link to next tutorial page
[skip ci]

--- a/docs/tutorials/01-Catalog_Dataframe.ipynb
+++ b/docs/tutorials/01-Catalog_Dataframe.ipynb
@@ -3345,7 +3345,7 @@
    "source": [
     "The `simulations` object, especially when agumented with the `dataframe`, provides powerful methods for selecting the particular simulations we are interested in.  Once we have done so, we need to load and interact with the simulations.\n",
     "\n",
-    "Continue with the [introduction to the `Simulation` objects](/tutorials/02-Simulation)."
+    "Continue with the [introduction to the `Simulation` objects](../02-Simulation)."
    ]
   }
  ],
