Fix link to next tutorial pages
[skip ci]

--- a/docs/tutorials/02-Simulation.ipynb
+++ b/docs/tutorials/02-Simulation.ipynb
@@ -664,8 +664,8 @@
    "source": [
     "The objects returned will be the subject of the next two notebooks in this series:\n",
     "\n",
-    "- [`Horizons`](/tutorials/03-Horizons)\n",
-    "- [`WaveformModes`](/tutorials/04-Waveforms)"
+    "- [`Horizons`](../03-Horizons)\n",
+    "- [`WaveformModes`](../04-Waveforms)"
    ]
   }
  ],
