Fix link to next tutorial page
[skip ci]

--- a/docs/tutorials/03-Horizons.ipynb
+++ b/docs/tutorials/03-Horizons.ipynb
@@ -394,7 +394,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Continue with the [introduction to waveforms](/tutorials/04-Waveforms)."
+    "Continue with the [introduction to waveforms](../04-Waveforms)."
    ]
   }
  ],
